# mgutils

./: .gitignore  CMakeLists.txt  ChangeLog  Doxyfile  Makefile.am  README  README.md  RELEASE-NOTES.md  autogen.sh  buildlib-rtems  configure.ac  configure.in  files.ng  get-files.sh  makefile.ng  mgutils.pc.in  source.ng
cmake/: FindMGUTILS.cmake  Makefile.am
include/: Makefile.am  mgutils.h
m4/: Makefile.am
samples/: CMakeLists.txt  Makefile.am
samples/mginit/: CMakeLists.txt  Makefile.am  custom_minigui.c  desktop.c  desktop.h  desktop_res_cn.h  desktop_res_en.h  desktop_res_tw.h  mginit.c  mginit.rc  taskbar.c  taskbar.h
samples/mginit/res/: Makefile.am
samples/mywins/: CMakeLists.txt  Makefile.am  mywins.c
samples/notebook/: CMakeLists.txt  Makefile.am  custom_minigui.c  main.c
samples/notebook/.deps/: custom_minigui.Po  main.Po
samples/painter/: CMakeLists.txt  Makefile.am  painter.c
samples/painter/.deps/: custom_minigui.Po  painter.Po
samples/picview/: CMakeLists.txt  Makefile.am  custom_minigui.c  picview.c
samples/picview/.deps/: custom_minigui.Po  picview.Po
samples/skin/: CMakeLists.txt  Makefile.am  skindemo.c
samples/templates/: CMakeLists.txt  Makefile.am  colorseldlg.c  fileopendlg.c  fontseldlg.c  infoshowdlg.c
samples/vcongui/: CMakeLists.txt  Makefile.am  custom_minigui.c  vcongui.c
src/: CMakeLists.txt  Makefile.am
src/mywins/: CMakeLists.txt  Makefile.am  colordlg.c  colorspace.c  helpwin.c  mywindows.c  newfiledlg.c
src/skin/: CMakeLists.txt  Makefile.am  bmplabel.c  bmplabel.h  chkbutton.c  chkbutton.h  cmdbutton.c  cmdbutton.h  item_comm.h  label.c  label.h  makefile.ng  mgcontrol.c  mgcontrol.h  rotslider.c  rotslider.h  skin.c  slider.c  slider.h
src/templates/: CMakeLists.txt  Makefile.am  colordlg.c  colorpanel.c  colorpanel.h  colorspace.c  commdlg.c  filedlg.c  fontdlg.c  infodlg.c  newcolordlg.c  newfiledlg.c  windows-funcs.c  windows-funcs.h
src/vcongui/: CMakeLists.txt  Makefile.am  child.c  child.h  defkeymap.c  defs.h  error.c  error.h  key.c  key.h  paint.c  paint.h  resource.h  terminal.c  terminal.h  vc.c  vc.h  vcongui.c  vt.c  vt.h
