SUBDIRS = src include $(SAMPLES) m4 cmake

# The directory where the include files will be installed
libmgutilsincludedir = $(includedir)/mgutils

# Which header files to install
libmgutilsinclude_HEADERS = mgutilsconfig.h

EXTRA_DIST = INSTALL README

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = mgutils.pc

