cmake_minimum_required (VERSION 2.6)
project (mgutils-samples)

if (MGRM_PROCESSES)
    add_subdirectory ( mginit )
endif (MGRM_PROCESSES)

if (WIN32)
    add_subdirectory ( templates )
    add_subdirectory ( mywins )
    add_subdirectory ( notebook )
    add_subdirectory ( painter )
    add_subdirectory ( picview )
else ()
    add_subdirectory ( vcongui )
    add_subdirectory ( templates )
    add_subdirectory ( mywins )
    add_subdirectory ( skin )
    add_subdirectory ( notebook )
    add_subdirectory ( painter )
    add_subdirectory ( picview )
endif (WIN32)
