TOP_DIR=../..
AM_CPPFLAGS=-I$(TOP_DIR)/include

noinst_LTLIBRARIES = libvcongui.la

libvcongui_la_SOURCES =     \
    child.c child.h error.c error.h      \
    key.c key.h paint.c paint.h resource.h terminal.c       \
    terminal.h vc.c vc.h vcongui.c vt.c vt.h defs.h defkeymap.c

EXTRA_DIST = \
    child.c child.h error.c error.h      \
    key.c key.h paint.c paint.h resource.h terminal.c       \
    terminal.h vc.c vc.h vcongui.c vt.c vt.h defs.h defkeymap.c
