EXTRA_DIST=kblackbox.gif  kcmx.png       konqueror.gif   konsole.png        kpresenter.png  \
           ksame.gif      ksokoban.png   kwrite.png      kblackbox.png      kmines.gif  \
           kpaint.png     kreversi.gif   ksame.png       kview.png          konqueror.png  \
           kcmx.gif       kmines.png     konsole.gif     kpresenter.gif     kreversi.png    \
           ksokoban.gif   kwrite.gif     resmanager.png  feynman.png 		bk.jpg   \
		   notebook.png   vcon.png 		 graphics.png 	 painter.png 	
